feat: add more examples for 4.23.0 release
- Apple Pay shipping example
- Apple Pay direct tax example
- Apple Pay advanced example
- Google Pay direct tax/shipping example
- update Ruby example to Ruby 3.2

--- a/public/style.css
+++ b/public/style.css
@@ -43,7 +43,7 @@ input[type='radio'] + label {
   display: inline-block;
 }
 
-input[type="text"], select {
+input[type="text"], input[type="email"], select {
   transition: border-color 0.3s;
   -webkit-appearance: none;
   appearance: none;
